fix word wrapping

--- a/public/toolkit/styles/molecules/_accordion-table.scss
+++ b/public/toolkit/styles/molecules/_accordion-table.scss
@@ -22,6 +22,7 @@ $horizontal-padding: 0.75rem;
 
   .pricing-header-spacer {
     flex-grow: 1 !important;
+    min-width: 0.5rem;
   }
 }
 
@@ -34,20 +35,18 @@ $horizontal-padding: 0.75rem;
       @include pricing-header-text-container();
 
       .pricing-accordion-income-container {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
+        text-align: end;
       }
 
       .header-number {
         @include text-size('gamma', 'medium');
         @include type-weight(regular);
         font-family: $serif-font-family;
-        padding-right: 0.5rem;
       }
 
       .header-light-text {
         color: $steel;
+        white-space: nowrap;
       }
     }
 
@@ -91,6 +90,7 @@ $horizontal-padding: 0.75rem;
 
   .cell-subtitle {
     @include small-pricing-text($color: $steel);
+    white-space: nowrap;
   }
 }
 
@@ -159,11 +159,9 @@ $horizontal-padding: 0.75rem;
 
   .mobile-table-row {
     @include small-pricing-text();
-  }
-
-  .mobile-table-row {
     th, td {
-      @include padding($vertical: $vertical-padding-mobile-small, $horizontal: 0);
+      @include padding($vertical: $vertical-padding-mobile-small, $left: 0, $right: $horizontal-padding);
+      vertical-align: top;
     }
 
     td {
